add config for board size

--- a/application.css
+++ b/application.css
@@ -42,3 +42,11 @@
 .fifth-column {
   border-left: 2px solid red;
 }
+
+.controls button {
+  margin: 5px;
+}
+
+.board-size-config {
+  margin: 5px;
+}
